# zed-lite

./: .rules  Cargo.toml  README.md
.github/: actionlint.yml
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  11_crash_report.yml
.github/workflows/: build_lite.yml  compare_perf.yml  compliance_check.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/settings/: default.json
crates/activity_indicator/: Cargo.toml
crates/askpass/: Cargo.toml
crates/assets/: Cargo.toml
crates/breadcrumbs/: Cargo.toml
crates/buffer_diff/: Cargo.toml
crates/cli/: Cargo.toml  build.rs
crates/client/: Cargo.toml
crates/clock/: Cargo.toml
crates/collections/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/command_palette_hooks/: Cargo.toml
crates/component/: Cargo.toml
crates/csv_preview/: Cargo.toml
crates/db/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/editor/: Cargo.toml
crates/encoding_selector/: Cargo.toml
crates/env_var/: Cargo.toml
crates/extension/: Cargo.toml
crates/extension_host/: Cargo.toml
crates/feature_flags/: Cargo.toml
crates/feature_flags_macros/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/file_icons/: Cargo.toml
crates/fs/: Cargo.toml
crates/fuzzy/: Cargo.toml
crates/fuzzy_nucleo/: Cargo.toml
crates/git/: Cargo.toml  clippy.toml
crates/git_hosting_providers/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/go_to_line/: Cargo.toml
crates/gpui/: Cargo.toml
crates/gpui_macos/: Cargo.toml
crates/gpui_macros/: Cargo.toml
crates/gpui_platform/: Cargo.toml
crates/gpui_shared_string/: Cargo.toml
crates/gpui_tokio/: Cargo.toml
crates/gpui_util/: Cargo.toml
crates/grammars/: Cargo.toml
crates/http_client/: Cargo.toml
crates/http_client_tls/: Cargo.toml
crates/icons/: Cargo.toml
crates/image_viewer/: Cargo.toml
crates/input_latency_ui/: Cargo.toml
crates/install_cli/: Cargo.toml
crates/json_schema_store/: Cargo.toml
crates/keymap_editor/: Cargo.toml
crates/language/: Cargo.toml
crates/language_core/: Cargo.toml
crates/language_extension/: Cargo.toml
crates/language_selector/: Cargo.toml
crates/languages/: Cargo.toml
crates/line_ending_selector/: Cargo.toml
crates/line_ending_selector/src/: line_ending_indicator.rs  line_ending_selector.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: status_toast.rs
crates/panel/: Cargo.toml
crates/snippet/: Cargo.toml
docs/: AGENTS.md  README.md
script/: bundle-linux  bundle-mac  bundle-windows.ps1  community-pr-track-mapping.json  crate-dep-graph  install-linux  install.sh  linux  new-crate  triage_watcher.jl  uninstall.sh
(+359 files in other folders)
