[package]
name = "gpui_platform"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/gpui_platform.rs"

[features]
lite = []
default = []
font-kit = ["gpui_macos/font-kit"]
test-support = ["gpui/test-support", "gpui_macos/test-support"]
screen-capture = ["gpui/screen-capture", "gpui_macos/screen-capture"]
runtime_shaders = ["gpui_macos/runtime_shaders"]
wayland = []
x11 = []

[dependencies]
gpui.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
gpui_macos.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
gpui = { workspace = true, features = ["windows-manifest"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
