[package]
name = "notifications"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/notifications.rs"
doctest = false

[features]
test-support = []
default = []

[dependencies]
component.workspace = true
gpui.workspace = true
ui.workspace = true
workspace.workspace = true
zed_actions.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
