[package]
name = "panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/panel.rs"

[features]
lite = []
test-support = []

[dependencies]
gpui.workspace = true
ui.workspace = true
workspace.workspace = true
